@@ -48,9 +48,9 @@ Spellbook_object::Spellbook_object
 	unsigned int shapex, unsigned int shapey, 
 	unsigned int lft, 
 	unsigned char *c,		// Circle spell flags.
-	uint32 f			// Flags (unknown).
+	unsigned char bmark		// Spell bookmark.
 	) : Ireg_game_object(shapenum, framenum,
-			shapex, shapey, lft), flags(f), bookmark(-1)
+	    shapex, shapey, lft), bookmark(bmark == 255 ? -1 : bmark)
 	{
 	memcpy(circles, c, sizeof(circles));
 	}
@@ -105,7 +105,10 @@ void Spellbook_object::write_ireg
 	*ptr++ = (get_lift()&15)<<4;	// Low bits?++++++
 	memcpy(ptr, &circles[5], 4);	// Rest of spell circles.
 	ptr += 4;
-	Write4(ptr, flags);
+	*ptr++ = 0;			// 3 unknowns.
+	*ptr++ = 0;
+	*ptr++ = 0;
+	*ptr++ = bookmark >= 0 ? bookmark : 255;
 	out->write((char*)buf, sizeof(buf));
 					// Write scheduled usecode.
 	Game_map::write_scheduled(out, this);	
